src/objects/Location__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business</label>
        <referenceTo>Business__c</referenceTo>
        <relationshipName>Location</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unique_Identifier__c</fullName>
        <externalId>true</externalId>
        <label>Unique Identifier</label>
        <length>8</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Valid_from_Date__c</fullName>
        <label>Valid from Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Valid_to_Date__c</fullName>
        <label>Valid to Date</label>
        <type>Date</type>
    </fields>
    <label>Location (NLC)</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Locations (NLC)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>